[package]
name = "edna2report_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.21.7"
criterion = "0.5.1"
itertools = "0.12.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = {version = "1.0.196", features= ["derive"]}
serde-xml-rs = "0.6.0"
serde_path_to_error = "0.1.15"

[[bench]]
name = "benches"
harness = false
